-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0, 5.7
-
None
-
6a081125a5b1b7d629a2c6e16a696ecc06dbb427 5aeafcea467ced35adca1d762d38bfbba2b59e1f
Qt 5.4 introduced the very nice '-opengl dynamic' switch to the configure script, but when building with the following configure switches:
-debug-and-release -c++11 -static -ltcg -opengl dynamic -target xp -no-icu -no-angle -mp -nomake examples
I get a compile error:
.\qwindowseglcontext.cpp(236) : error C2039: 'glActiveTexture' : is not a member of '`global namespace''
and several other lines in that init() method saying that 'glActiveTexture' and many others do not belong to the global namespace.
Based on the code of the RESOLVE macro it seems that compiling Qt statically doesn't honor the dynamic binding to the OpenGL library stated by '-opengl dynamic' configure switch.
| For Gerrit Dashboard: QTBUG-43993 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 103908,4 | Make -static -opengl dynamic builds succeed | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |